# integration-x

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.codex/skills/twenty-crm/: SKILL.md
.github/: pull_request_template.md
docs/: twenty-crm.md
src/integration_x/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  normalize.py  orchestrator.py  parser.py  sftp.py  twenty.py
tests/: test_normalize.py  test_orchestrator.py  test_parser.py  test_twenty_client.py
tests/fixtures/: Customers.xml  malformed.xml
