[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "integration-x"
version = "0.1.0"
description = "One-shot SFTP → Twenty CRM integration"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "paramiko>=3.0",
    "httpx>=0.27",
    "lxml>=5.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
integration-x = "integration_x.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/integration_x"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
